# medical-ai-spleen-segmentation-MONAI

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  check_gpu.py  export_onnx.py  pyproject.toml  requirements.txt  validate_onnx.py
api/: __init__.py  app.py
cpp/: inference.cpp
scripts/: benchmark.py  check_gpu.py  explore_data.py  export_onnx.py  export_tensorrt.sh  inference.py  post_process.py  train.py  validate_dice.py  validate_onnx.py
src/: app.py  download_data.py  explore_data.py  inference.cpp  inference.py  model.py  post_process.py  train.py  train_utils.py  transforms.py
src/spleen_seg/: __init__.py  config.py
src/spleen_seg/inference/: __init__.py  onnx.py  post_process.py  pytorch.py  tensorrt.py
src/spleen_seg/model/: __init__.py  unet.py
src/spleen_seg/training/: __init__.py  losses.py  train.py
wandb/: latest-run
wandb/run-20260129_064836-hdb6fuws/: run-hdb6fuws.wandb
wandb/run-20260129_065746-vihqn2vz/: run-vihqn2vz.wandb
wandb/run-20260129_070659-6v5agqnf/: run-6v5agqnf.wandb
wandb/run-20260129_070659-6v5agqnf/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260129_071827-vle2wx61/: run-vle2wx61.wandb
wandb/run-20260129_071827-vle2wx61/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260129_073033-7udv9tjp/: run-7udv9tjp.wandb
wandb/run-20260129_073033-7udv9tjp/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260129_074019-movq4fwf/: run-movq4fwf.wandb
wandb/run-20260129_074019-movq4fwf/files/: config.yaml  (+2 more)
